Fix grid overflow
replacement for https://github.com/georchestra/geonetwork/pull/83

--- a/web-ui/src/main/resources/catalog/style/ellipsis.less
+++ b/web-ui/src/main/resources/catalog/style/ellipsis.less
@@ -1,4 +1,4 @@
-@ellipsis-height: 124px;
+@ellipsis-height: 91px;
 
 .ellipsis {
   overflow: hidden;
